Add bottom section with logo, title and link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         </div>
 
         </section>
+
+        <section class="bottom">
+            <div class="logo">
+                <img href="./resources/css/images/phone.png" alt="phone-logo">
+            </div>
+            <h1>Coming Soon for iPhone and Android</h1>
+            <p class="links"><link>Download Excursion (Coming soon!)</link></p>
+
+
+        </section>
         
 
         
