--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="links"><link>Download Excursion (Coming soon!)</link></p>
 
         <div class="'video-media">
-            <video src="./resources/css/videos/excursion.mp4" autoplay loop>
+            <video src="./resources/css/videos/excursion.mp4" type='video/mp4' autoplay>
             Video not supported
           </video>
 
